# trader-google-c

./: .env.example  .gitignore  CLAUDE.md  COWORK_HANDOFF.md  Dockerfile  HOWTO.md  OVERHAUL_PLAN.md  README.md  TODO.md  cloudbuild.yaml  pyproject.toml  sa-key.json
.claude/: settings.json  setup-session.sh
.github/workflows/: deploy.yml  ftbot-ci.yml
agent/: analytics.py  broker.py  config.py  executor.py  ft_monitor.py  main.py  report.py  requirements.txt  risk.py  signals.py  state.py
agent/brokers/: __init__.py  alpaca.py  base.py  binance.py  bybit.py
app/: broker.py  main.py  reconcile.py  risk.py  state.py  trade_engine.py
cloud/: main.py  telegram.py
docs/: architecture.mdx  go-live.mdx  index.mdx  strategy.mdx
docs/research/: backtesting.mdx  returns.mdx  variants.mdx
docs/run/: gcp.mdx  monitoring.mdx  pc.mdx
ftbot/: DEPLOY_GCP.md  PC_GUIDE.md  RESEARCH_returns.md  SETUP.md  config.dry.json  start-bot.bat  start-bot.ps1  watch-bot.bat  watch-bot.ps1
ftbot/strategies/: ClaudeBreakout.py  ClaudeConsensus.py  ClaudeDayTrader.py  ClaudeDonchian15m.py  ClaudeMomoScalp.py  ClaudeORB.py  ClaudePullback.py  ClaudeRSI2.py  ClaudeSqueeze.py  ClaudeTrend1h.py  ClaudeVWAP.py  README.md  breakout_hyperopt.py  breakout_research.py  breakout_variants.py  research_sizing.py
scripts/: setup_gcp.sh  trigger_test_webhook.sh
tests/: conftest.py  test_reconcile.py  test_relay.py  test_research_sizing.py  test_risk.py  test_trade_engine.py
tradingview/: SETUP.md  indicators.pine
