[project]
name = "tradingbot"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "gunicorn==22.0.0",
    "google-cloud-firestore==2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-mock==3.14.0",
    "ruff==0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
